discussion/jgit/170246/170246_rev1_discussion.txt
======================================================================================================================
DESCRIPTION:

Fix OperatorPrecedence warning flagged by error prone

Building with Bazel is failing with this error message:

HttpSupport.java:480: error: [OperatorPrecedence] Use grouping
parenthesis to make the operator precedence explicit
    if (c >= 'a' && c <= 'z' || c >= 'A' && c <= 'Z') {
                             ^
    (see https://errorprone.info/bugpattern/OperatorPrecedence)
Did you mean 'if ((c >= 'a' && c <= 'z') || (c >= 'A' && c <= 'Z')) {'?

Change-Id: I96089d3158d06ba981cfdf2b03865261b328de23

======================================================================================================================
COMMENTS
======================================================================================================================
Author: David Ostrovsky
Date: 2020-10-02 16:54:03.000000000
Message: 
Uploaded patch set 1.
----------------------------------------------------------------------------------------------------------------------
Author: JGit Bot
Date: 2020-10-02 16:54:11.000000000
Message: 
Patch Set 1:

Build Started https://ci.eclipse.org/jgit/job/stable/job/jgit.gerrit-pipeline/3707/
----------------------------------------------------------------------------------------------------------------------
Author: JGit Bot
Date: 2020-10-02 17:29:19.000000000
Message: 
Patch Set 1: Verified+1

Build Successful 

https://ci.eclipse.org/jgit/job/stable/job/jgit.gerrit-pipeline/3707/ : SUCCESS
----------------------------------------------------------------------------------------------------------------------
Author: Matthias Sohn
Date: 2020-10-04 22:51:55.000000000
Message: 
Patch Set 1: Code-Review+2
----------------------------------------------------------------------------------------------------------------------
Author: Matthias Sohn
Date: 2020-10-04 22:52:30.000000000
Message: 
Change has been successfully merged by Matthias Sohn
----------------------------------------------------------------------------------------------------------------------
Author: JGit Bot
Date: 2020-10-23 15:26:53.000000000
Message: 
Patch Set 1:

No Builds Executed
----------------------------------------------------------------------------------------------------------------------
